--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql+asyncpg://postgres:tushar08@localhost:5432/book_db
 DB_USER = postgres
-DB_PASSWORD = Autviz4648
+DB_PASSWORD = tushar08
 DB_HOST = localhost     
 DB_PORT = 5432   
 # DB_NAME = haut_db  
